@@ -1,0 +1,2 @@
+prog: bug499212
+vgopts: -q
