@@ -49,6 +49,7 @@ are not entered into bugzilla tend to get forgotten about or ignored.
         even though it's generated by --gen-suppressions=yes
 498143  False positive on EVIOCGRAB ioctl
 498492  none/tests/amd64/lzcnt64 crashes on FreeBSD compiled with clang
+499212  mmap() with MAP_ALIGNED() returns unaligned pointer
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
